Fix tooltip arrow color in dark mode

--- a/client/bootstrap.scss
+++ b/client/bootstrap.scss
@@ -154,6 +154,7 @@ $card-bg:           $black; // $gray-700
 
 $tooltip-bg: $gray-700;
 $tooltip-opacity: .99;
+$tooltip-arrow-color: $tooltip-bg;
 
 $popover-bg: $gray-700;
 
